UI Updates. - Fix Product Modal Close Button position. - Fix too much blank space at mobile Product modal. - Remove horizontal scrollbar at KA1S page.

--- a/css/ka1s.css
+++ b/css/ka1s.css
@@ -12,6 +12,11 @@
     font-size:25px;
 }
 
+.ka1s-section {
+    background-color:black;
+    overflow-x: hidden;
+}
+
 @media(max-width:1200px) {
     
     #margin-top-ka1s-btns {
